--- a/scripts/.air.toml
+++ b/scripts/.air.toml
@@ -3,7 +3,16 @@ tmp_dir = ".air"
 
 [build]
   bin = "./.air/bytebase --port 8080 --frontend-port 3000 --data ."
-  cmd = "go build -gcflags=all=\"-N -l\" -o ./.air/bytebase ./bin/server/main.go"
+  cmd = """
+  go build -gcflags=all=\"-N -l\" \
+  -ldflags " \
+  -X 'github.com/bytebase/bytebase/bin/server/cmd.version=development' \
+  -X 'github.com/bytebase/bytebase/bin/server/cmd.goversion=$(go version)' \
+  -X 'github.com/bytebase/bytebase/bin/server/cmd.gitcommit=$(git rev-parse HEAD)' \
+  -X 'github.com/bytebase/bytebase/bin/server/cmd.buildtime=$(date -u +"%Y-%m-%dT%H:%M:%SZ")' \
+  -X 'github.com/bytebase/bytebase/bin/server/cmd.builduser=$(id -u -n)' \
+  " \
+  -o ./.air/bytebase ./bin/server/main.go"""
   delay = 1000
   exclude_dir = [".air", "vendor", "frontend", "docs"]
   exclude_file = []
