--- a/scripts/.air_bb.toml
+++ b/scripts/.air_bb.toml
@@ -3,7 +3,16 @@ tmp_dir = ".air"
 
 [build]
   bin = "./.air/bb version"
-  cmd = "go build -o ./.air/bb ./bin/bb/main.go"
+  cmd = """
+  go build \
+  -ldflags " \
+  -X 'github.com/bytebase/bytebase/bin/bb/cmd.version=development' \
+  -X 'github.com/bytebase/bytebase/bin/bb/cmd.goversion=$(go version)' \
+  -X 'github.com/bytebase/bytebase/bin/bb/cmd.gitcommit=$(git rev-parse HEAD)' \
+  -X 'github.com/bytebase/bytebase/bin/bb/cmd.buildtime=$(date -u +"%Y-%m-%dT%H:%M:%SZ")' \
+  -X 'github.com/bytebase/bytebase/bin/bb/cmd.builduser=$(id -u -n)' \
+  " \
+  -o ./.air/bb ./bin/bb/main.go"""
   delay = 1000
   exclude_dir = [".air", "vendor", "frontend", "docs"]
   exclude_file = []
