chore: set GitHub action go test timeout (#1551)
* chore: set GitHub action go test timeout

* chore: set GitHub action go test timeout

* chore: update

Former-commit-id: a31551d5f087a7e6ca29dbbeaf051c8c462b41de

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,7 @@ jobs:
           - "release,"
           - ""
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v2
