chore: add vscode launch option to debug golang binary (#1560)
* chore: add vscode launch option to debug golang binary

* chore: update

Former-commit-id: c1769c4ed6754b91ee7e2242b5bbbf2f0a5432e9

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug Dev Binary",
+            "type": "go",
+            "request": "launch",
+            "mode": "exec",
+            "program": "${workspaceFolder}/.air/bytebase"
+        },
+        {
             "name": "Attach to Process",
             "type": "go",
             "request": "attach",
