chore: fix paramenters (#1572)
Former-commit-id: 5f0b50b7306ef3317b4e5dcfd85a705a250f7c7a

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,12 @@
             "type": "go",
             "request": "launch",
             "mode": "exec",
-            "program": "${workspaceFolder}/.air/bytebase"
+            "program": "${workspaceFolder}/.air/bytebase",
+            "args": [
+                "--port", "8080",
+                "--frontend-port", "3000",
+                "--data", "${workspaceFolder}/.air",
+            ]
         },
         {
             "name": "Attach to Process",
