feat(demo): initial guide data (#1611)
* feat: initial demo guide data

* chore: add `schema-migration` demo data

Former-commit-id: 2e062cf34341f152ed85ceabf19b9f9604c71a0b

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -54,6 +54,7 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
     // "allowUmdGlobalAccess": true,          /* Allow accessing UMD globals from modules. */
+    "resolveJsonModule": true /* Allows importing modules with a ‘.json’ extension. */,
 
     /* Source Map Options */
     // "sourceRoot": "",                      /* Specify the location where debugger should locate TypeScript files instead of source locations. */
