--- a/quickstart/gitlab-quickstart.docker-compose.yml
+++ b/quickstart/gitlab-quickstart.docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   bb:
-    image: bytebase/bytebase:1.2.0
+    image: bytebase/bytebase:${BB_VERSION}
     init: true
     container_name: bytebase
     restart: always
