chore: change occurrence of "bytebase" to "Bytebase" (#1663)
* chore: change occurrence of "bytebase" to "Bytebase"

* chore: update

* chore: update

Former-commit-id: 1156da9d7f7f35705bf147b94690617e860f9035

--- a/Dockerfile.render-preview
+++ b/Dockerfile.render-preview
@@ -74,7 +74,7 @@ COPY --from=backend /backend-build/bytebase /usr/local/bin/
 # - Demo script to launch Bytebase in readonly demo mode
 COPY ./scripts /usr/local/bin/
 
-# Create bytebase user for running Postgres database and server.
+# Create user "bytebase" for running Postgres database and server.
 RUN addgroup --gid 113 --system bytebase && adduser --uid 113 --system bytebase && adduser bytebase bytebase
 
 # Directory to store the data, which can be referenced as the mounting point.
