--- a/Dockerfile.render
+++ b/Dockerfile.render
@@ -62,7 +62,8 @@ LABEL org.opencontainers.image.created=${BUILD_TIME}
 LABEL org.opencontainers.image.authors=${BUILD_USER}
 
 # Our HEALTHCHECK instruction in dockerfile needs curl.
-RUN apt-get update && apt-get install -y locales curl
+# Install psmisc to use killall command in demo.sh.
+RUN apt-get update && apt-get install -y locales curl psmisc
 # Generate en_US.UTF-8 locale which is needed to start postgres server.
 # Fix the posgres server issue (invalid value for parameter "lc_messages": "en_US.UTF-8").
 RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && locale-gen
