chore: separate test steps & increase timeout minutes (#1753)
* chore: seperate "install dependencies" & "run all tests"

* chore: increase timeout

Former-commit-id: 7f1cc9a30ea56cff5ec38ee05bd09d82b5a0e2e4

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,7 +63,8 @@ jobs:
         run: |
           mkdir -p server/dist
           touch server/dist/index.html
-      - name: Install dependencies and run all tests
-        run: |
-          go generate -tags ${{ matrix.release-tags }}mysql ./...
-          go test -v ./... -tags=${{ matrix.release-tags }}mysql
+      - name: Install dependencies
+        run: go generate -tags ${{ matrix.release-tags }}mysql ./...
+      - name: Run all tests
+        timeout-minutes: 15
+        run: go test -v ./... -tags=${{ matrix.release-tags }}mysql
