chore: add linters for sql (#1755)
Former-commit-id: 983fa1fe0cbda6c854b2d63d984f76ce0d913e86

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -7,6 +7,8 @@ linters:
     - staticcheck
     - misspell
     - gocritic
+    - sqlclosecheck
+    - rowserrcheck
 
 # golangci-lint run --exclude="Rollback,logger.Sync,pgInstance.Stop"
 issues:
