--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "vueuc": "^0.4.27"
   },
   "devDependencies": {
+    "@rollup/plugin-yaml": "^3.1.0",
     "@iconify/json": "^1.1.432",
     "@intlify/vite-plugin-vue-i18n": "^3.2.1",
     "@tailwindcss/forms": "^0.5.0",
