chore: increase test timeout & pretty print tests running time (#1768)
* chore: increate test timeout & pretty print tests running time

* chore: ci tests pretty print

* chore: remove unused id

* chore: remove unnecessary cat

Former-commit-id: a081a6d9d9b90c9708e51d5451de416b4da912a7

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
           - "release,"
           - ""
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -66,5 +66,6 @@ jobs:
       - name: Install dependencies
         run: go generate -tags ${{ matrix.release-tags }}mysql ./...
       - name: Run all tests
-        timeout-minutes: 15
-        run: go test -v ./... -tags=${{ matrix.release-tags }}mysql
+        run: go test -v ./... -tags=${{ matrix.release-tags }}mysql | tee test.log
+      - name: Pretty print tests running time
+        run: grep --color=never -e '--- PASS:' -e '--- FAIL:' test.log
