chore: sort test output by time and display accumulated sum (#1777)
* chore: sort test output by time

* Update .github/workflows/tests.yml

Co-authored-by: p0ny <907577610@qq.com>

* feat: accumulate sum test time

Co-authored-by: p0ny <907577610@qq.com>
Former-commit-id: b3ddbced2cd9d8560afe9e46969a01032339a8b6

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,4 +68,9 @@ jobs:
       - name: Run all tests
         run: go test -v ./... -tags=${{ matrix.release-tags }}mysql | tee test.log
       - name: Pretty print tests running time
-        run: grep --color=never -e '--- PASS:' -e '--- FAIL:' test.log
+        # grep: filter out lines like "--- PASS: TestVCS (15.04s)"
+        # sed: remove unnecessary characters
+        # awk: re-format lines to "PASS: TestVCS (15.04s)"
+        # sort: cut into columns by delimiter ' ' (single space) and sort by column 3 (test time in seconds) as numeric type in reverse order (largest comes first)
+        # awk: accumulate sum by test time in seconds
+        run: grep --color=never -e '--- PASS:' -e '--- FAIL:' test.log | sed 's/[:()]//g' | awk '{print $2,$3,$4}' | sort -t' ' -nk3 -r | awk '{sum += $3; print $1,$2,$3,sum"s"}'
