--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,33 @@ jobs:
           go mod tidy
           git diff --exit-code
 
+  # Copied from draft-release.yml, should be consistent if updating draft-release.yml.
+  release-dry-run:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 6.10.0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "14"
+          cache: pnpm
+          cache-dependency-path: "frontend/pnpm-lock.yaml"
+      - run: pnpm install --frozen-lockfile
+        working-directory: frontend
+      - run: pnpm release
+        working-directory: frontend
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
+      - name: Release dry-run
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          args: release --skip-publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   go-tests:
     strategy:
       matrix:
