--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -9,7 +9,7 @@ jobs:
   release-binary:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2.1.0
         with:
           version: 6.10.0
@@ -22,9 +22,11 @@ jobs:
         working-directory: frontend
       - run: pnpm release
         working-directory: frontend
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v3
         with:
           go-version: 1.16
+          check-latest: true
+          cache: true
       - name: Release
         uses: goreleaser/goreleaser-action@v2
         with:
