feat: add embed_frontend tag to goreleaser (#1819)
* fix: dedup migration file

* fix: escape input for logging

* fix: address comment

* docs: add comment

* feat: refix “create dev-ci image embedding the frontend”

This is 2nd attempt after https://github.com/bytebase/bytebase/pull/1726

The 1st attempt is reverted in https://github.com/bytebase/bytebase/pull/1781

The new fix avoids the dirty git file.

* feat: add embed_frontend tag to goreleaser

Former-commit-id: 4153bfbd50ac09a53ed1f3b6be4b52ff9e089e4a

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,6 +14,7 @@ builds:
       - -X github.com/bytebase/bytebase/bin/server/cmd.builduser=goreleaser
     tags:
       - release
+      - embed_frontend
     env:
       - VERSION="development"
       - GO_VERSION="1.16.5"
