chore: remove not release tag for pg parser and pg advisor (#1803)
* chore: remove not release tag for pg parser and pg advisor

* chore: use goreleaser-cross

* chore: change to arm64

* test: try to release on linux/amd64

* test: try to release on linux: amd64 and arm64

* chore: try build linux/arma64

* chore: install aarch64 gcc

* chore: try build linux arm64 and amd64

* chore: try build darwin amd64

* chore: update o64-clang

* chore: install libssl

* chore: try build all bytebase

* chore: add CGO

* chore: try goreleaser v33

* chore: not use overrides

* chore: not use path

* chore: try release for darwin

* chore: upload binaries

* chore: try all

* chore: refine draft release and goreleaser config

Former-commit-id: 82783312016b0b2d5370f7ae18bcdad938d49c0b

--- a/.goreleaser-for-linux.yaml
+++ b/.goreleaser-for-linux.yaml
@@ -18,15 +18,24 @@ builds:
     env:
       - VERSION="development"
       - GO_VERSION="1.16.5"
+      - CGO_ENABLED=1
       - GIT_COMMIT="unknown"
       - BUILD_TIME="unknown"
       - BUILD_USER="unknown"
     goos:
       - linux
-      - darwin
     goarch:
       - amd64
       - arm64
+    overrides:
+      - goos: linux
+        goarch: arm64
+        env:
+          - CC=aarch64-linux-gnu-gcc
+      - goos: linux
+        goarch: amd64
+        env:
+          - CC=gcc
   - id: cli
     main: ./bin/bb
     binary: bb
@@ -42,15 +51,24 @@ builds:
     env:
       - VERSION="development"
       - GO_VERSION="1.16.5"
+      - CGO_ENABLED=1
       - GIT_COMMIT="unknown"
       - BUILD_TIME="unknown"
       - BUILD_USER="unknown"
     goos:
       - linux
-      - darwin
     goarch:
       - amd64
       - arm64
+    overrides:
+      - goos: linux
+        goarch: arm64
+        env:
+          - CC=aarch64-linux-gnu-gcc
+      - goos: linux
+        goarch: amd64
+        env:
+          - CC=gcc
 archives:
   - replacements:
       darwin: Darwin
