--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,8 +30,38 @@ jobs:
           args: -v
 
   # Copied from draft-release.yml, should be consistent if updating draft-release.yml.
-  release-dry-run:
+  release-dry-run-linux:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 6.10.0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "14"
+          cache: pnpm
+          cache-dependency-path: "frontend/pnpm-lock.yaml"
+      - run: pnpm install --frozen-lockfile
+        working-directory: frontend
+      - run: pnpm release
+        working-directory: frontend
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.16
+          check-latest: true
+          cache: true
+      - name: Install cross-compiler for linux/arm64
+        run: sudo apt-get -y install gcc-aarch64-linux-gnu
+      - name: Release dry-run
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          args: release --skip-publish --config .goreleaser-for-linux.yaml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release-dry-run-darwin:
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2.1.0
@@ -54,7 +84,7 @@ jobs:
       - name: Release dry-run
         uses: goreleaser/goreleaser-action@v2
         with:
-          args: release --skip-publish
+          args: release --skip-publish --config .goreleaser-for-darwin.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
