--- a/.github/workflows/build-artifacts-and-draft-release.yml
+++ b/.github/workflows/build-artifacts-and-draft-release.yml
@@ -6,7 +6,7 @@ on:
       - "*.*.*"
 
 jobs:
-  release-linux-binary:
+  build-linux-binary:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -29,13 +29,18 @@ jobs:
           cache: true
       - name: Install cross-compiler for linux/arm64
         run: sudo apt-get -y install gcc-aarch64-linux-gnu
-      - name: Release
+      - name: Build
         uses: goreleaser/goreleaser-action@v2
         with:
-          args: release --config .goreleaser-for-linux.yaml
+          args: release --skip-publish --config .goreleaser-for-linux.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  release-darwin-binary:
+      - name: Upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: bytebase-linux
+          path: dist/bytebase*
+  build-darwin-binary:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -56,9 +61,63 @@ jobs:
           go-version: 1.16
           check-latest: true
           cache: true
+      - name: Build
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          args: release --skip-publish --config .goreleaser-for-darwin.yaml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: bytebase-darwin
+          path: dist/bytebase*
+  draft-release:
+    needs: [build-linux-binary, build-darwin-binary]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 6.10.0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "14"
+          cache: pnpm
+          cache-dependency-path: "frontend/pnpm-lock.yaml"
+      - run: pnpm install --frozen-lockfile
+        working-directory: frontend
+      - run: pnpm release
+        working-directory: frontend
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.16
+          check-latest: true
+          cache: true
+      - name: Make directories
+        run: |
+          mkdir -p ./bytebase-build/linux
+          mkdir -p ./bytebase-build/darwin
+      - name: Download linux binaries
+        uses: actions/download-artifact@v3
+        with:
+          name: bytebase-linux
+          path: ./bytebase-build/linux
+      - name: Download darwin binaries
+        uses: actions/download-artifact@v3
+        with:
+          name: bytebase-darwin
+          path: ./bytebase-build/darwin
+      - name: Merge checksum file
+        run: |
+          cd ./bytebase-build
+          cat ./darwin/bytebase*checksums.txt >> checksums.txt
+          cat ./linux/bytebase*checksums.txt >> checksums.txt
+          rm ./darwin/bytebase*checksums.txt
+          rm ./linux/bytebase*checksums.txt
       - name: Release
         uses: goreleaser/goreleaser-action@v2
         with:
-          args: release --config .goreleaser-for-darwin.yaml
+          args: release --config .goreleaser-release.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
