--- a/frontend/src/types/sqlReviewConfig.yaml
+++ b/frontend/src/types/sqlReviewConfig.yaml
@@ -42,6 +42,10 @@ templateList:
             payload:
               type: STRING
               default: "^[a-z]+(_[a-z]+)*$"
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: naming.column
         category: NAMING
@@ -51,6 +55,10 @@ templateList:
             payload:
               type: STRING
               default: "^[a-z]+(_[a-z]+)*$"
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: naming.index.uk
         category: NAMING
@@ -63,6 +71,10 @@ templateList:
               templateList:
                 - table
                 - column_list
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: naming.index.idx
         category: NAMING
@@ -75,6 +87,10 @@ templateList:
               templateList:
                 - table
                 - column_list
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: naming.index.fk
         category: NAMING
@@ -89,6 +105,10 @@ templateList:
                 - referencing_column
                 - referenced_table
                 - referenced_column
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: column.required
         category: COLUMN
@@ -134,6 +154,10 @@ templateList:
             payload:
               type: STRING
               default: "^[a-z]+(_[a-z]+)*$"
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: naming.column
         category: NAMING
@@ -143,6 +167,10 @@ templateList:
             payload:
               type: STRING
               default: "^[a-z]+(_[a-z]+)*$"
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: naming.index.uk
         category: NAMING
@@ -155,6 +183,10 @@ templateList:
               templateList:
                 - table
                 - column_list
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: naming.index.idx
         category: NAMING
@@ -167,6 +199,10 @@ templateList:
               templateList:
                 - table
                 - column_list
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: naming.index.fk
         category: NAMING
@@ -181,6 +217,10 @@ templateList:
                 - referencing_column
                 - referenced_table
                 - referenced_column
+          - key: length_limit
+            payload:
+              type: NUMBER
+              default: 64
         level: WARNING
       - type: column.required
         category: COLUMN
