chore: add table no foreign key rule (#1854)
* chore: add table no foreign key rule

* fix: test

Former-commit-id: 9fb71e27c356a61cf2eaf714bc34a8c870a6e097

--- a/frontend/src/types/sqlReviewConfig.yaml
+++ b/frontend/src/types/sqlReviewConfig.yaml
@@ -19,6 +19,11 @@ templateList:
         engine: COMMON
         level: ERROR
         componentList: []
+      - type: table.no-foreign-key
+        category: TABLE
+        engine: COMMON
+        level: ERROR
+        componentList: []
       - type: statement.select.no-select-all
         category: STATEMENT
         engine: COMMON
@@ -145,6 +150,11 @@ templateList:
         category: TABLE
         engine: COMMON
         level: ERROR
+        componentList: []
+      - type: table.no-foreign-key
+        category: TABLE
+        engine: COMMON
+        level: WARNING
         componentList: []
       - type: naming.table
         category: NAMING
