chore: do not release linux-arm64 (#1858)
Former-commit-id: 2260471e91518fd1da556a43fdce5666c2a5931c

--- a/.goreleaser-for-linux.yaml
+++ b/.goreleaser-for-linux.yaml
@@ -24,14 +24,10 @@ builds:
       - BUILD_USER="unknown"
     goos:
       - linux
+    # We currently cannot run mysqlbinlog on arm64.
     goarch:
       - amd64
-      - arm64
     overrides:
-      - goos: linux
-        goarch: arm64
-        env:
-          - CC=aarch64-linux-gnu-gcc
       - goos: linux
         goarch: amd64
         env:
@@ -57,14 +53,10 @@ builds:
       - BUILD_USER="unknown"
     goos:
       - linux
+    # We currently cannot run mysqlbinlog on arm64.
     goarch:
       - amd64
-      - arm64
     overrides:
-      - goos: linux
-        goarch: arm64
-        env:
-          - CC=aarch64-linux-gnu-gcc
       - goos: linux
         goarch: amd64
         env:
