chore(schema system): implement the drop table naming convention rule (#1867)
* feat: add table.drop-with-name-pattern rule in the frontend

* chore: rename the rule type

* chore: implement the drop table naming convention in the backend

* fix: lint

* chore: fix error code

* chore: fix conflict

* fix: test

* chore: update test

* chore: update test

Co-authored-by: Danny Xu <98006139+d-bytebase@users.noreply.github.com>
Former-commit-id: 750cce39d97c4826369840da77780f66fdc81b12

--- a/frontend/src/types/sqlReviewConfig.yaml
+++ b/frontend/src/types/sqlReviewConfig.yaml
@@ -24,6 +24,15 @@ templateList:
         engine: COMMON
         level: ERROR
         componentList: []
+      - type: table.drop-naming-convention
+        category: TABLE
+        engine: COMMON
+        level: ERROR
+        componentList:
+          - key: name_format
+            payload:
+              type: STRING
+              default: "_delete$"
       - type: statement.select.no-select-all
         category: STATEMENT
         engine: COMMON
@@ -156,6 +165,15 @@ templateList:
         engine: COMMON
         level: WARNING
         componentList: []
+      - type: table.drop-naming-convention
+        category: TABLE
+        engine: COMMON
+        level: ERROR
+        componentList:
+          - key: name_format
+            payload:
+              type: STRING
+              default: "_delete$"
       - type: naming.table
         category: NAMING
         engine: COMMON
