--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@bytebase/vue-kbar": "^0.1.6",
+    "@markdoc/markdoc": "^0.1.3",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@vueuse/core": "^8.6.0",
     "axios": "^0.26.0",
     "dayjs": "^1.10.7",
+    "dompurify": "^2.3.9",
     "escape-string-regexp": "^5.0.0",
     "highlight.js": "^11.0.1",
     "inter-ui": "^3.15.0",
+    "js-yaml": "^4.1.0",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.33.0",
     "naive-ui": "^2.30.0",
@@ -39,12 +42,14 @@
     "vueuc": "^0.4.27"
   },
   "devDependencies": {
-    "@rollup/plugin-yaml": "^3.1.0",
     "@iconify/json": "^1.1.432",
     "@intlify/vite-plugin-vue-i18n": "^3.2.1",
+    "@rollup/plugin-yaml": "^3.1.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/dompurify": "^2.3.3",
+    "@types/js-yaml": "^4.0.5",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^16.11.9",
     "@types/papaparse": "^5.3.1",
