chore(sql review): support drop database rule (#1914)
* chore: support drop db rule

* chore: update advisor

* chore: change localization

Former-commit-id: 18097c8dcce7cbd3765c3bb402611666d09ccd45

--- a/frontend/src/types/sqlReviewConfig.yaml
+++ b/frontend/src/types/sqlReviewConfig.yaml
@@ -6,6 +6,7 @@ categoryList:
   - TABLE
   - SCHEMA
   - COLUMN
+  - DATABASE
 templateList:
   - id: mysql.prod
     ruleList:
@@ -148,6 +149,11 @@ templateList:
         engine: MYSQL
         level: WARNING
         componentList: []
+      - type: database.drop-empty-database
+        category: DATABASE
+        engine: COMMON
+        level: ERROR
+        componentList: []
   - id: mysql.dev
     ruleList:
       - type: engine.mysql.use-innodb
@@ -288,4 +294,9 @@ templateList:
         category: SCHEMA
         engine: MYSQL
         level: WARNING
+        componentList: []
+      - type: database.drop-empty-database
+        category: DATABASE
+        engine: COMMON
+        level: ERROR
         componentList: []
