--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.18
+          # TODO(dragonly): switch to go 1.18 when all linters are supported.
+          go-version: 1.17
           check-latest: true
           cache: true
       - name: Verify go.mod is tidy
