--- a/.github/workflows/build-artifacts-and-draft-release.yml
+++ b/.github/workflows/build-artifacts-and-draft-release.yml
@@ -6,8 +6,13 @@ on:
       - "*.*.*"
 
 jobs:
-  build-linux-binary:
-    runs-on: ubuntu-latest
+  build-binary:
+    strategy:
+      matrix:
+        os:
+          - "ubuntu"
+          - "macos"
+    runs-on: ${{ matrix.os }}-latest
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2.1.0
@@ -30,39 +35,7 @@ jobs:
       - name: Build
         uses: goreleaser/goreleaser-action@v2
         with:
-          args: release --skip-publish --config .goreleaser-for-linux.yaml
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Upload
-        uses: actions/upload-artifact@v3
-        with:
-          name: bytebase-linux
-          path: dist/bytebase*
-  build-darwin-binary:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.1.0
-        with:
-          version: 6.10.0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "14"
-          cache: pnpm
-          cache-dependency-path: "frontend/pnpm-lock.yaml"
-      - run: pnpm install --frozen-lockfile
-        working-directory: frontend
-      - run: pnpm release
-        working-directory: frontend
-      - uses: actions/setup-go@v3
-        with:
-          go-version: 1.18
-          check-latest: true
-          cache: true
-      - name: Build
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          args: release --skip-publish --config .goreleaser-for-darwin.yaml
+          args: release --skip-publish --config .goreleaser-for-${{ matrix.os }}.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload
@@ -70,8 +43,10 @@ jobs:
         with:
           name: bytebase-darwin
           path: dist/bytebase*
+
   draft-release:
-    needs: [build-linux-binary, build-darwin-binary]
+    needs:
+      - build-binary
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
