--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,8 +31,13 @@ jobs:
           args: -v
 
   # Copied from build-artifacts-and-draft-release.yml, should be consistent if updating build-artifacts-and-draft-release.yml.
-  release-dry-run-linux:
-    runs-on: ubuntu-latest
+  release-dry-run:
+    strategy:
+      matrix:
+        os:
+          - "ubuntu"
+          - "macos"
+    runs-on: ${{ matrix.os }}-latest
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2.1.0
@@ -52,38 +57,10 @@ jobs:
           go-version: 1.18
           check-latest: true
           cache: true
-      - name: Release dry-run
+      - name: Build
         uses: goreleaser/goreleaser-action@v2
         with:
-          args: release --skip-publish --config .goreleaser-for-linux.yaml
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  release-dry-run-darwin:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.1.0
-        with:
-          version: 6.10.0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "14"
-          cache: pnpm
-          cache-dependency-path: "frontend/pnpm-lock.yaml"
-      - run: pnpm install --frozen-lockfile
-        working-directory: frontend
-      - run: pnpm release
-        working-directory: frontend
-      - uses: actions/setup-go@v3
-        with:
-          go-version: 1.18
-          check-latest: true
-          cache: true
-      - name: Release dry-run
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          args: release --skip-publish --config .goreleaser-for-darwin.yaml
+          args: release --skip-publish --config .goreleaser-for-${{ matrix.os }}.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
