chore: enable more revive linters (part 1) (#1928)
* chore: enable more revive linters

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* Update server/sheet.go

Former-commit-id: 78bf730125a0696128605873dbd8e42c46665251

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -30,11 +30,57 @@ run:
 
 linters-settings:
   revive:
+    # Default to run all linters so that new rules in the future could automatically be added to the static check.
+    enable-all-rules: true
     rules:
-      - name: exported
-        arguments:
-          - checkPrivateReceivers
-          - sayRepetitiveInsteadOfStutters
+      # The following rules are too strict and make coding harder. We do not enable them for now.
+      - name: file-header
+        disabled: true
+      - name: line-length-limit
+        disabled: true
+      - name: function-length
+        disabled: true
+      - name: max-public-structs
+        disabled: true
+      - name: function-result-limit
+        disabled: true
+      - name: banned-characters
+        disabled: true
+      - name: argument-limit
+        disabled: true
+      - name: cognitive-complexity
+        disabled: true
+      - name: cyclomatic
+        disabled: true
+      - name: confusing-results
+        disabled: true
+      - name: add-constant
+        disabled: true
+      - name: flag-parameter
+        disabled: true
+      - name: nested-structs
+        disabled: true
+      - name: import-shadowing
+        disabled: true
+      - name: early-return
+        disabled: true
+      # TODO(dragonly): Remove the rules below in the following PRs.
+      - name: unused-parameter
+        disabled: true
+      - name: unused-receiver
+        disabled: true
+      - name: unhandled-error
+        disabled: true
+      - name: if-return
+        disabled: true
+      - name: empty-block
+        disabled: true
+      - name: empty-lines
+        disabled: true
+      - name: confusing-naming
+        disabled: true
+      - name: defer
+        disabled: true
   gocritic:
     disabled-checks:
       - ifElseChain
