--- a/Dockerfile.render-demo
+++ b/Dockerfile.render-demo
@@ -1,6 +1,8 @@
-# This script is for demo.bytebase.com and staging.bytebase.com on Render ONLY
+# This script is for PR preview and demo.bytebase.com on Render ONLY.
 
 FROM node:14 as frontend
+
+ARG RELEASE="dev"
 
 RUN npm i -g pnpm
 
@@ -13,17 +15,17 @@ RUN pnpm install --frozen-lockfile
 COPY ./frontend/ .
 
 # Build frontend
-RUN pnpm release-docker
+RUN pnpm "${RELEASE}-docker"
 
 FROM golang:1.18.4 as backend
 
-ARG VERSION="development"
-ARG GO_VERSION="1.18.4"
+ARG GO_VERSION="unknown"
+# RENDER_GIT_COMMIT is a render.com provided env var during build.
+# https://render.com/docs/environment-variables
 ARG RENDER_GIT_COMMIT="unknown"
 ARG BUILD_TIME="unknown"
 ARG BUILD_USER="unknown"
 
-# Build in release mode so we will embed the frontend
 ARG RELEASE="release"
 
 # Need gcc for CGO_ENABLED=1
@@ -36,14 +38,13 @@ COPY . .
 # Copy frontend asset
 COPY --from=frontend /frontend-build/dist ./server/dist
 
-# For VERSION info
-COPY ./scripts .
+COPY ./scripts/VERSION .
 
 # -ldflags="-w -s" means omit DWARF symbol table and the symbol table and debug information
 # go-sqlite3 requires CGO_ENABLED
-RUN CMD_VERSION=`cat ./VERSION` && CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build \
+RUN VERSION=`cat ./VERSION` && CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build \
         --tags "${RELEASE},embed_frontend" \
-        -ldflags="-w -s -X 'github.com/bytebase/bytebase/bin/server/cmd.version=${CMD_VERSION}' -X 'github.com/bytebase/bytebase/bin/server/cmd.goversion=${GO_VERSION}' -X 'github.com/bytebase/bytebase/bin/server/cmd.gitcommit=${RENDER_GIT_COMMIT}' -X 'github.com/bytebase/bytebase/bin/server/cmd.buildtime=${BUILD_TIME}' -X 'github.com/bytebase/bytebase/bin/server/cmd.builduser=${BUILD_USER}'" \
+        -ldflags="-w -s -X 'github.com/bytebase/bytebase/bin/server/cmd.version=${VERSION}' -X 'github.com/bytebase/bytebase/bin/server/cmd.goversion=${GO_VERSION}' -X 'github.com/bytebase/bytebase/bin/server/cmd.gitcommit=${RENDER_GIT_COMMIT}' -X 'github.com/bytebase/bytebase/bin/server/cmd.buildtime=${BUILD_TIME}' -X 'github.com/bytebase/bytebase/bin/server/cmd.builduser=${BUILD_USER}'" \
         -o bytebase \
         ./bin/server/main.go
 
@@ -62,13 +63,14 @@ LABEL org.opencontainers.image.created=${BUILD_TIME}
 LABEL org.opencontainers.image.authors=${BUILD_USER}
 
 # Our HEALTHCHECK instruction in dockerfile needs curl.
-# Install psmisc to use killall command in demo.sh.
+# Install psmisc to use killall command in demo.sh used by render.com.
 RUN apt-get update && apt-get install -y locales curl psmisc
 # Generate en_US.UTF-8 locale which is needed to start postgres server.
 # Fix the posgres server issue (invalid value for parameter "lc_messages": "en_US.UTF-8").
 RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && locale-gen
 
 COPY --from=backend /backend-build/bytebase /usr/local/bin/
+COPY --from=backend /etc/ssl/certs /etc/ssl/certs
 
 # Copy utility scripts, we have
 # - Demo script to launch Bytebase in readonly demo mode
