--- a/Dockerfile.render-demo
+++ b/Dockerfile.render-demo
@@ -26,7 +26,7 @@ ARG RENDER_GIT_COMMIT="unknown"
 ARG BUILD_TIME="unknown"
 ARG BUILD_USER="unknown"
 
-ARG RELEASE="release"
+ARG RELEASE="dev"
 
 # Need gcc for CGO_ENABLED=1
 RUN apt-get install -y gcc
