chore: nilerr, a new linter rule (#1991)
* chore: nilerr, a new linter rule

* fix: linter error

* fix: linter

* chore: update

Co-authored-by: d-bytebase <d@bytebase.com>
Former-commit-id: 85bbb8f9f89a0419c60ae85bae932ee869ebf040

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -9,6 +9,7 @@ linters:
     - gocritic
     - sqlclosecheck
     - rowserrcheck
+    - nilerr
 
 # golangci-lint run --exclude="Rollback,logger.Sync,pgInstance.Stop"
 issues:
