fix: make `common.Errorf` support formatting (#1998)
Former-commit-id: 6c5257d4f0022a8217b2181fd7afdf06ccde2c7c

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -83,3 +83,8 @@ linters-settings:
   gocritic:
     disabled-checks:
       - ifElseChain
+  govet:
+    settings:
+      printf: # The name of the analyzer, run `go tool vet help` to see the list of all analyzers
+        funcs: # Run `go tool vet help printf` to see the full configuration of `printf`
+          - common.Errorf
