chore: update the naming convention for drop table (#1993)
* chore: update the naming convention for drop table

* chore: update the default value

Former-commit-id: 2dac10c6fa915b0bd404aa8542f2af2a38937741

--- a/frontend/src/types/sqlReviewConfig.yaml
+++ b/frontend/src/types/sqlReviewConfig.yaml
@@ -33,7 +33,7 @@ templateList:
           - key: name_format
             payload:
               type: STRING
-              default: "_delete$"
+              default: _del$
       - type: statement.select.no-select-all
         category: STATEMENT
         engine: COMMON
@@ -179,7 +179,7 @@ templateList:
           - key: name_format
             payload:
               type: STRING
-              default: "_delete$"
+              default: _del$
       - type: naming.table
         category: NAMING
         engine: COMMON
