fix: copy sql review files for frontend (#2040)
Former-commit-id: 563114a4b388b65712d2c8317f1fa78c75cf4450

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ bytebase-build
 
 dist/
 docs/openapi/swagger.json
+frontend/src/types/sql-review.mysql.dev.yaml
+frontend/src/types/sql-review.mysql.prod.yaml
