--- a/Dockerfile.render-demo
+++ b/Dockerfile.render-demo
@@ -13,6 +13,8 @@ COPY ./frontend/package.json ./frontend/pnpm-lock.yaml ./
 RUN pnpm install --frozen-lockfile
 
 COPY ./frontend/ .
+# Copy the SQL review config files to the frontend
+COPY ./plugin/advisor/config/ ./src/types
 
 # Build frontend
 RUN pnpm "${RELEASE}-docker"
