feat: initial the sql review service (#2057)
* chore: initial the sql review service

* chore: update the api

* chore: generate the swagger docs

* chore: bugfix

* chore: update docs

* chore: update controller

* chore: update config

* chore: remove unused config

* chore: update docs

* fix: lint

* chore: rename to sql service

* fix: remove unused import

* chore: rename

Former-commit-id: ca24150c300a3bbe235d7fb983eb52ded0216500

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,5 @@ bytebase-build
 
 dist/
 docs/openapi/swagger.json
-frontend/src/types/sql-review.mysql.dev.yaml
-frontend/src/types/sql-review.mysql.prod.yaml
+docs/sqlservice/swagger.json
+frontend/src/types/sql-review.*.yaml
