chore: golangci-lint skip cache (#2083)
Former-commit-id: 6d1142c54e972fced49cbc16ffec0d16069fabe2

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           version: v1.45.2
           args: -v
+          skip-cache: true
 
   # Copied from build-artifacts-and-draft-release.yml, should be consistent if updating build-artifacts-and-draft-release.yml.
   release-dry-run:
