chore: update sql review config for rule engine (#2114)
* chore: update sql review config

* chore: use engine array instead of a single engine

* chore: update the doc

* fix: config test

Former-commit-id: af83b5896056ed6ba625dbe421574871692d56a9

--- a/plugin/advisor/config/sql-review.dev.yaml
+++ b/plugin/advisor/config/sql-review.dev.yaml
@@ -1,4 +1,4 @@
-id: bb.sql-review.mysql.dev
+id: bb.sql-review.dev
 ruleList:
   - type: engine.mysql.use-innodb
     level: ERROR
@@ -30,6 +30,11 @@ ruleList:
     level: WARNING
     payload:
       format: "^uk_{{table}}_{{column_list}}$"
+      maxLength: 64
+  - type: naming.index.pk
+    level: WARNING
+    payload:
+      format: "^pk_{{table}}_{{column_list}}$"
       maxLength: 64
   - type: naming.index.idx
     level: WARNING
