--- a/plugin/advisor/config/sql-review.override.yaml
+++ b/plugin/advisor/config/sql-review.override.yaml
@@ -1,4 +1,4 @@
-template: bb.sql-review.mysql.prod # Provide the template id, then we can extend rules from the specific template.
+template: bb.sql-review.prod # Provide the template id, then we can extend rules from the specific template.
 ruleList:
   - type: statement.select.no-select-all
     level: DISABLED
