--- a/.github/workflows/build-push-release-image.yml
+++ b/.github/workflows/build-push-release-image.yml
@@ -54,3 +54,17 @@ jobs:
             BUILD_USER=${{ env.BUILD_USER }}
       - name: Image digest
         run: echo "Successfully pushed bytebase/bb:${{ env.RELEASE_VERSION }} ${{ steps.bb_build.outputs.digest }}"
+      - name: Build and push SQL service
+        id: sql_build
+        uses: docker/build-push-action@v2
+        with:
+          file: Dockerfile.sql-service
+          push: true
+          tags: bytebase/sql:${{ env.RELEASE_VERSION }}
+          build-args: |
+            VERSION=${{ env.RELEASE_VERSION }}
+            GIT_COMMIT=${{ env.GIT_COMMIT }}
+            BUILD_TIME=${{ env.BUILD_TIME }}
+            BUILD_USER=${{ env.BUILD_USER }}
+      - name: Image digest
+        run: echo "Successfully pushed bytebase/sql:${{ env.RELEASE_VERSION }} ${{ steps.sql_build.outputs.digest }}"
