chore: enable linter unhandled-error (#2213)
* chore: enable linter unhandled-error

* chore: update

Former-commit-id: d3beb941f38f69ceab82b05e8953b422187a1d4e

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -24,6 +24,8 @@ issues:
     - Rollback
     - logger.Sync
     - pgInstance.Stop
+    - fmt.Printf
+    - fmt.Print
 
 run:
   timeout: 5m
@@ -67,8 +69,6 @@ linters-settings:
       - name: early-return
         disabled: true
       # TODO(dragonly): Remove the rules below in the following PRs.
-      - name: unhandled-error
-        disabled: true
       - name: if-return
         disabled: true
       - name: empty-block
