--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@vueuse/core": "^8.6.0",
     "axios": "^0.26.0",
+    "canvas-confetti": "^1.5.1",
     "dayjs": "^1.10.7",
     "dompurify": "^2.3.9",
     "escape-string-regexp": "^5.0.0",
@@ -31,6 +32,7 @@
     "papaparse": "^5.3.1",
     "pinia": "^2.0.12",
     "qs": "^6.11.0",
+    "rollup": "^2.50.0",
     "semver": "^7.3.7",
     "slug": "^4.0.2",
     "splitpanes": "^3.0.6",
@@ -49,6 +51,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/canvas-confetti": "^1.4.3",
     "@types/dompurify": "^2.3.3",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash-es": "^4.17.4",
