fix: SQL review rules (#2271)
Former-commit-id: 8b0d0253df2e604b6d59f32d579d19164c8d6530

--- a/plugin/advisor/config/sql-review.dev.yaml
+++ b/plugin/advisor/config/sql-review.dev.yaml
@@ -20,32 +20,32 @@ ruleList:
     level: WARNING
     payload:
       format: "^[a-z]+(_[a-z]+)*$"
-      maxLength: 64
+      maxLength: 63
   - type: naming.column
     level: WARNING
     payload:
       format: "^[a-z]+(_[a-z]+)*$"
-      maxLength: 64
+      maxLength: 63
   - type: naming.index.uk
     level: WARNING
     payload:
-      format: "^uk_{{table}}_{{column_list}}$"
-      maxLength: 64
+      format: "^$|^uk_{{table}}_{{column_list}}$"
+      maxLength: 63
   - type: naming.index.pk
     level: WARNING
     payload:
-      format: "^pk_{{table}}_{{column_list}}$"
-      maxLength: 64
+      format: "^$|^pk_{{table}}_{{column_list}}$"
+      maxLength: 63
   - type: naming.index.idx
     level: WARNING
     payload:
-      format: "^idx_{{table}}_{{column_list}}$"
-      maxLength: 64
+      format: "^$|^idx_{{table}}_{{column_list}}$"
+      maxLength: 63
   - type: naming.index.fk
     level: WARNING
     payload:
-      format: "^fk_{{referencing_table}}_{{referencing_column}}_{{referenced_table}}_{{referenced_column}}$"
-      maxLength: 64
+      format: "^$|^fk_{{referencing_table}}_{{referencing_column}}_{{referenced_table}}_{{referenced_column}}$"
+      maxLength: 63
   - type: column.required
     level: WARNING
     payload:
